# confluence.md

./: .gitignore  README.md  conftest.py  markdown-with-metadata.md  markdown.md  md2cf.py  pyproject.toml  requirements.txt  sample.md  setup.cfg
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
src/md2cf/: main.py
src/md2cf/utils/: confluencemd.py  log.py  md2html.py
src/tests/: sample_2.md  test_basic.md  test_confluencemd.py  test_jira.md  test_wrong_images.md
utils/: confluencemd.py  log.py
