[metadata]
name = md2cf
version = 0.1.1
author = Szymon Nieradka
description = Markdown to Confluence - upload any .md files to your Confluence cloud page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/szn/md2cf
project_urls =
    Bug Tracker = https://github.com/szn/md2cf/issues
keywords = markdown, confluence, md, atlassian
license = MIT
download_url = 
home_page = https://github.com/szn/md2cf
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
include_package_data = True
install_requires =
    importlib; python_version == "3.7"
    atlassian-python-api==3.20.*
    coloredlogs==15.0.*
    markdown2==2.4.*
    termcolor==1.1.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    md2cf = md2cf.main:main
