[metadata]
name = confluence.md
version = 0.2.2
author = Szymon Nieradka
description = Markdown to Confluence - upload any .md files to your Confluence cloud page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/szn/confluence.md
project_urls =
    Bug Tracker = https://github.com/szn/confluence.md/issues
keywords = markdown, confluence, md, atlassian
license = MIT
download_url = 
home_page = https://github.com/szn/confluence.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Natural Language :: English
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
include_package_data = True
install_requires =
    importlib; python_version == "3.7"
    atlassian-python-api>=3.18.1
    coloredlogs>=15.0.1
    markdown2>=2.4.1
    termcolor>=1.1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    confluence.md = md2cf.main:main
